updates active pill on Community

--- a/community.html
+++ b/community.html
@@ -73,7 +73,7 @@
 						<a href="./community.html#stories" class="dropdown-item">Stories</a>
 					</div>
 				</li> -->
-				<li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
+				<li class="nav-item"><a href="./community.html" class="nav-link active">Community</a></li>
 
 				<li class="nav-item"><a href="./boop-soc.html" class="nav-link">Project Puppies</a></li>
 				<li class="nav-item dropdown">
