--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 	<!-- end back to top button -->
 
 	<nav class="navbar navbar-expand-lg sticky-top">
-		<a href="./index.html#home" class="navbar-brand">Boop</a>
+		<a href="./home.html" class="navbar-brand">Boop</a>
 
 		<!-- burger -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
