--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 		<!-- end back to top button -->
 		
 		<nav class="navbar navbar-expand-lg sticky-top">
-			<a href="#home" class="navbar-brand">Boop</a>
+			<a href="./home.html" class="navbar-brand">Boop</a>
 
 			<!-- burger -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
